8290529: C2: assert(BoolTest(btest).is_canonical()) failure

Reviewed-by: kvn
Backport-of: 77e21c57ce00463db4cc3d87f93729cbfe2c96b4